--- a/FRONT/src/app/components/views/pessoa/listar-pessoa/listar-pessoa.component.html
+++ b/FRONT/src/app/components/views/pessoa/listar-pessoa/listar-pessoa.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/produto/cadastrar">Cadastrar Produto</a>
+<a routerLink="/pessoa/cadastrar">Cadastrar Pessoa</a>
 
 <ol>
     <table>
